[tool.poetry]
name = "morty"
version = "0.3.0-dev.3"
description = "TBU"
readme = "README.md"
homepage = "https://github.com/roma-glushko/morty"
repository = "https://github.com/roma-glushko/morty.git"
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
keywords = ["machine-learning", "experiment-tracking", "deep-learning"]
license = "MIT"

packages = [
    { include = "morty" },
]

include = [
    "morty/dashboard/frontend/build/**/*.*",
]

exclude = [
    "morty/dashboard/frontend/*.*",
    "morty/dashboard/frontend/src/",
    "morty/dashboard/frontend/public/",
    "morty/dashboard/frontend/.next/",
    "morty/dashboard/frontend/node_modules/",
    "morty/dashboard/frontend/.husky/",
    "morty/dashboard/frontend/.github/",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/roma-glushko/morty/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
attrdict = "^2.0.1"
tabulate = "^0.8.9"
funkybob = "^2018.5.1"
pydantic = "^1.8.2"
click = "^8.0.1"
rich = "^10.11.0"
Flask = "^2.0.2"
tensorflow = { version = "^2.6.0", optional = true }
humanfriendly = "^10.0"

[tool.poetry.extras]
tf = ["tensorflow"]
tensorflow = ["tensorflow"]

[tool.poetry.scripts]
morty = 'morty.cli:main'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.3"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"
types-tabulate = "^0.8.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
